--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,8 @@
     ],
     "require": {
         "php": ">=5.3.0"
-    }
+    },
+    "autoload": {
+        "classmap": ["Intercom.php"]
+    }    
 }
